--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Home page</h1>
-    <a href="{% url 'users:register' %}">Register</a> /
+    <a href="{% url 'products:book-list' %}">Books</a> /
     <a href="{% url 'test' %}">Test</a> /
     {% if request.user.is_authenticated %}
         <a href="{% url 'users:logout' %}">Logout</a>
